2010-09-13  Michael R. Mauger  <mmaug@yahoo.com>

	* progmodes/sql.el: Version 2.7.
	(sql-buffer-live-p): Improve detection.
	(sql-find-sqli-buffer, sql-set-sqli-buffer-generally)
	(sql-set-sqli-buffer): Use it.
	(sql-product-interactive): Run `sql-set-sqli-hook'.
	(sql-rename-buffer): Code cleanup.
	(sql-redirect, sql-redirect-value): New functions.  More to come.

2010-09-13  Juanma Barranquero  <lekktu@gmail.com>

	Port tramp-related Makefile changes of revnos 101381, 101422 to Windows.
	* makefile.w32-in (LOADDEFS): Add $(lisp)/net/tramp-loaddefs.el.
	(TRAMP_SRC): New macro.
	($(lisp)/net/tramp-loaddefs.el): New target.

2010-09-13  Michael Albinus  <michael.albinus@gmx.de>

	Major code cleanup.  Split tramp.el into tramp.el and tramp-sh.el.

	* Makefile.in (TRAMP_SRC): Remove tramp-fish.el.  Add tramp-sh.el.

	* net/tramp.el (top): Don't show loading message.  Require just
	'tramp-compat, everything else is required there.  Use
	`ignore-errors' where appropriate.
	(tramp-inline-compress-start-size, tramp-copy-size-limit)
	(tramp-terminal-type, tramp-end-of-output)
	(tramp-initial-end-of-output, tramp-completion-function-alist-rsh)
	(tramp-completion-function-alist-ssh)
	(tramp-completion-function-alist-telnet)
	(tramp-completion-function-alist-su)
	(tramp-completion-function-alist-putty, tramp-remote-path)
	(tramp-remote-process-environment, tramp-sh-extra-args)
	(tramp-actions-before-shell, tramp-uudecode)
	(tramp-perl-file-truename, tramp-perl-file-name-all-completions)
	(tramp-perl-file-attributes)
	(tramp-perl-directory-files-and-attributes)
	(tramp-perl-encode-with-module, tramp-perl-decode-with-module)
	(tramp-perl-encode, tramp-perl-decode)
	(tramp-vc-registered-read-file-names, tramp-file-mode-type-map)
	(tramp-file-name-handler-alist, tramp-make-tramp-temp-file)
	(tramp-handle-make-symbolic-link, tramp-handle-load)
	(tramp-handle-file-name-as-directory)
	(tramp-handle-file-name-directory)